--- a/src/pages/Desktop/Map/Map.module.css
+++ b/src/pages/Desktop/Map/Map.module.css
@@ -175,7 +175,7 @@
   border: 3px solid var(--secondary);
   background: var(--primary);
   box-shadow: 0px 0px 10px 0px #bdecff;
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -183,4 +183,18 @@
   height: 44px;
   border-radius: 30px;
   margin-top: 8px;
+}
+
+.LoadingButton {
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background: var(--colori-neutri-white);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 8px;
+  border: none;
+  position: absolute;
 }
