--- a/src/pages/Desktop/List/List.module.css
+++ b/src/pages/Desktop/List/List.module.css
@@ -6,7 +6,10 @@
   flex-shrink: 0;
   border-radius: 30px;
   background: var(--colori-neutri-background);
-  margin-left: 8px;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
   transition: all 0.5s ease-in-out;
 }
 
@@ -66,6 +69,15 @@
   cursor: pointer;
 }
 
+.ListContainer {
+  width: 100%;
+  height: 100%;
+  border-radius: 30px;
+  margin-left: 8px;
+  position: relative;
+  overflow: hidden;
+}
+
 .ListMonuments {
   border-radius: 10px;
   background: var(--overlay);
@@ -74,6 +86,7 @@
   height: calc(100% - 52px);
   overflow-y: auto;
   position: relative;
+  width: 100%;
 }
 
 .MonumentCard {
