--- a/src/components/Mobile/SlideShow/SlideShow.module.css
+++ b/src/components/Mobile/SlideShow/SlideShow.module.css
@@ -146,6 +146,42 @@
   cursor: pointer;
 }
 
+.CurrentImage {
+  color: var(--colori-neutri-white);
+  text-align: center;
+  /* H2 */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+
+  margin-left: 8px;
+  margin-top: 2px;
+  position: absolute;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 7;
+}
+
+.PrevArrow{
+  position: absolute;
+  top: 50%;
+  left: 20px;
+  transform: translateY(-50%);
+  z-index: 7;
+  cursor: pointer;
+}
+
+.NextArrow{
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  z-index: 7;
+  cursor: pointer;
+}
+
 @media screen and (min-width: 768px) {
   .SlideShowImage {
     height: 100%;
