--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -534,7 +534,7 @@
   margin-bottom: 16px;
 }
 
-.ButtonFixedCaricaFoto{
+.ButtonFixedCaricaFoto {
   display: none;
 }
 
@@ -560,7 +560,7 @@
     font-weight: 500;
     line-height: normal;
     display: flex;
-    
+
     justify-content: center;
     align-items: center;
     align-self: stretch;
@@ -577,7 +577,41 @@
     z-index: 7;
   }
 
-  .FixedButtonUpload{
+  .FixedButtonUpload {
     display: none;
+  }
+
+  .VeduteInsieme {
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    align-self: stretch;
+    margin-top: 16px;
+    border-radius: 10px;
+    background: var(--overlay);
+    /* Shade Button Light */
+    box-shadow: 1px 1px 0px 0px rgba(17, 138, 178, 0.23);
+  }
+
+  .VeduteInsiemeTitle {
+    color: var(--primary);
+    text-align: center;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+  }
+
+  .VeduteInsiemeText {
+    color: var(--primary);
+    /* Body */
+    font-family: var(--font-roboto-slab);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
   }
 }
