--- a/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
+++ b/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
@@ -98,27 +98,44 @@
 }
 
 .OrderingItem {
+  display: flex;
+  height: 34px;
+  padding: 8px 0px 8px 24px;
+  align-items: center;
+  gap: 32px;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  color: var(--primary-color, #118ab2);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 8px;
+}
+
+.OrderingItemActive {
+  background: var(--primary);
+  color: var(--colori-neutri-white);
+}
+
+@media screen and (min-width: 768px) {
+  .OverlayFilters {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* background: var(--overlay); */
+    z-index: 8;
     display: flex;
-    height: 34px;
-    padding: 8px 0px 8px 24px;
     align-items: center;
-    gap: 32px;
-    align-self: stretch;
-    border-radius: 5px;
-    background: var(--colori-neutri-white);
-    color: var(--primary-color, #118ab2);
-    text-align: center;
-    /* Body */
-    font-family: var(--font-roboto-slab);
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-bottom: 8px;
+    justify-content: center;
+    padding: 16px;
+    background-color: rgba(0, 0, 0, 0.2);
+    overflow-y: auto;
   }
-  
-  .OrderingItemActive {
-    background: var(--primary);
-    color: var(--colori-neutri-white);
-  }
-  
+}
