--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -173,6 +173,46 @@
   line-height: normal;
 }
 
+.UploadAvvenuto {
+  color: var(--primary);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.ResponseOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 24px 16px;
+  overflow-y: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ResponseContainer {
+  display: flex;
+  width: 100%;
+  padding: 40px 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  position: absolute;
+  bottom: 0px;
+  border-radius: 30px 30px 0px 0px;
+  background: var(--overlay, #e9f1f3);
+  /* Shadow Overlay */
+  box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.1);
+}
+
 @media screen and (min-width: 768px) {
   .ModalUploadContainer {
     width: 60%;
@@ -200,5 +240,35 @@
     margin-top: 8px;
     display: flex;
     justify-content: space-between;
+  }
+
+  .ResponseOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    background: rgba(0, 0, 0, 0.2);
+    padding: 24px 16px;
+    overflow-y: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .ResponseContainer {
+    display: flex;
+    width: 629px;
+    height: 592px;
+    padding: 16px 64px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    gap: 71px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: var(--overlay);
   }
 }
