--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -122,6 +122,10 @@
   line-height: normal;
 }
 
+.ButtonUpload:hover {
+  background: var(--primary);
+}
+
 .ImageToUpload {
   width: 100%;
   height: 250px;
@@ -211,6 +215,15 @@
   background: var(--overlay, #e9f1f3);
   /* Shadow Overlay */
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.1);
+}
+
+.Error {
+  color: darkred;
+  text-align: left;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
 @media screen and (min-width: 768px) {
