Adding link to profile images

--- a/src/pages/Desktop/Profile/Profile.module.css
+++ b/src/pages/Desktop/Profile/Profile.module.css
@@ -67,9 +67,9 @@
   line-height: normal;
 }
 
-.LogoutButton:hover{
-    background: var(--primary);
-    color: var(--colori-neutri-white);
+.LogoutButton:hover {
+  background: var(--primary);
+  color: var(--colori-neutri-white);
 }
 
 .LogoutButton:hover > svg > path {
@@ -159,4 +159,25 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+}
+
+.ButtonImagesProfile {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  width: 100%;
+  padding: 16px 24px;
+  height: 100%;
+  border-radius: 8px;
+  background: var(--secondary);
+  color: var(--colori-neutri-white);
+  border: none;
+  margin-top: 32px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.ButtonImagesProfile:hover {
+  background: var(--primary);
 }
