--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -217,6 +217,19 @@
   box-shadow: 0px -4px 8px 0px rgba(0, 0, 0, 0.1);
 }
 
+.ErrorServer {
+  padding: 16px;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  color: white;
+  width: 100%;
+  margin-top: 8px;
+  background-color: red;
+  border-radius: 8px;
+}
+
 .Error {
   color: red;
   text-align: left;
