--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -28,6 +28,7 @@
   border: 1px solid var(--colori-neutri-white);
   background: var(--colori-neutri-gray-2);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  margin-bottom: 4px;
 }
 
 .LabelInput {
