--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -134,6 +134,7 @@
   background-position: center;
   border-radius: 5px;
   background-repeat: no-repeat;
+  /* transition: background-image 4s ease-in-out; */
 }
 
 .PaginationDot {
