--- a/src/pages/Desktop/Profile/Profile.module.css
+++ b/src/pages/Desktop/Profile/Profile.module.css
@@ -1,8 +1,8 @@
 .ProfileContent {
   background-color: var(--colori-neutri-white);
-  width: 532px;
   height: 100%;
   border-radius: 30px;
+  display: flex;
 }
 
 .ProfileContainer {
@@ -180,4 +180,61 @@
 
 .ButtonImagesProfile:hover {
   background: var(--primary);
+}
+
+.BlockCambioLingua {
+  display: flex;
+  width: 257px;
+  padding: 24px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  align-self: stretch;
+  border-radius: 30px;
+  background: var(--overlay);
+  margin: 16px;
+}
+
+.TitoloCambiaLingua {
+  color: var(--primary);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  border-bottom: 0.5px solid var(--primary);
+  padding-bottom: 8px;
+}
+
+.OrderingItem {
+  display: flex;
+  height: 34px;
+  padding: 8px 0px 8px 24px;
+  align-items: center;
+  gap: 32px;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--colori-neutri-white);
+  color: var(--primary-color, #118ab2);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 8px;
+  cursor: pointer;
+}
+
+.OrderingItemActive {
+  background: var(--primary);
+  color: var(--colori-neutri-white);
+  cursor: pointer;
+}
+
+.ListOrderingItems{
+    width: 100%;
 }
