Adding transitions for hover buttons

--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -121,6 +121,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  transition: all 0.3s ease-in-out;
 }
 
 .ButtonUpload:hover {
