--- a/src/pages/Desktop/Profile/Profile.module.css
+++ b/src/pages/Desktop/Profile/Profile.module.css
@@ -65,6 +65,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  transition: all 0.3s ease-in-out;
 }
 
 .LogoutButton:hover {
@@ -147,6 +148,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  transition: all 0.3s ease-in-out;
 }
 
 .LoginButton:hover {
