--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -575,6 +575,7 @@
     top: 90px;
     width: max-content;
     z-index: 3;
+    transition: all 0.3s ease-in-out;
   }
 
   .ButtonFixedCaricaFoto:hover {
