--- a/src/pages/Mobile/Profile/Profile.module.css
+++ b/src/pages/Mobile/Profile/Profile.module.css
@@ -121,6 +121,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  transition: all 0.3s ease-in-out;
 }
 
 .LogoutButton:hover {
