Changing error color

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ body,
   --monumento-poche-foto: #973FFF;
   --concorso: #fed169;
   --overlay: #e9f1f3;
+  --success: #0B8927;
   --colori-neutri-white: #ffffff;
   --colori-neutri-gray: #84a5bd;
   --colori-neutri-gray-2: #d0dfe4;
