--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -130,7 +130,7 @@
 
 .ImageToUpload {
   width: 100%;
-  height: 250px;
+  height: 220px;
   background-size: contain;
   background-position: center;
   border-radius: 5px;
@@ -229,12 +229,12 @@
   color: white;
   width: 100%;
   margin-top: 8px;
-  background-color: red;
+  background-color: var(--tertiary);
   border-radius: 8px;
 }
 
 .Error {
-  color: red;
+  color: var(--tertiary);
   text-align: left;
   font-size: 12px;
   font-style: normal;
