--- a/src/pages/Desktop/Profile/Profile.module.css
+++ b/src/pages/Desktop/Profile/Profile.module.css
@@ -3,11 +3,12 @@
   height: 100%;
   border-radius: 30px;
   display: flex;
+  overflow-y: auto;
 }
 
 .ProfileContainer {
   display: flex;
-  padding: 16px 32px 0px 32px;
+  padding: 16px 32px 16px 32px;
   flex-direction: column;
   align-items: center;
   gap: 56px;
