--- a/src/pages/Mobile/Map/Map.module.css
+++ b/src/pages/Mobile/Map/Map.module.css
@@ -118,7 +118,7 @@
   color: var(--primary);
 }
 
-.LoadingButton{
+.LoadingButton {
   display: flex;
   width: 44px;
   height: 44px;
@@ -133,4 +133,54 @@
   left: 16px;
   top: 124px;
   z-index: 1;
+}
+
+.DetailMarker {
+  display: flex;
+  width: 160px;
+  height: max-content;
+  padding: 8px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  /* Markers */
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+.PinMarker {
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  content: ' ';
+  font-size: 0;
+  line-height: 0;
+  margin-left: -10px;
+  width: 0;
+}
+
+.TitleMarker {
+  color: var(--colori-neutri-white);
+  text-align: center;
+  /* H2 */
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.TextMarker {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--colori-neutri-white, #fff);
+  text-align: center;
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
