--- a/src/pages/Mobile/Profile/Profile.module.css
+++ b/src/pages/Mobile/Profile/Profile.module.css
@@ -7,6 +7,13 @@
   flex: 1 0 0;
   align-self: stretch;
   width: 100%;
+  
+}
+
+.ProfileContent{
+    overflow-y: auto;
+    height: 100%;
+    padding-bottom: 16px;
 }
 
 .BlockChangeLanguage {
