--- a/src/components/Desktop/BlockOrdering/BlockOrdering.module.css
+++ b/src/components/Desktop/BlockOrdering/BlockOrdering.module.css
@@ -56,6 +56,12 @@
   cursor: pointer;
 }
 
+.OrderingItemDisabled {
+  opacity: 0.4;
+  cursor: not-allowed;
+}
+
 .ListOrderingItems{
     width: 100%;
 }
+
