--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -55,7 +55,7 @@
   cursor: pointer;
 }
 
-.BlockImageRelevant{
+.BlockImageRelevant {
   border-radius: 5px;
   height: 221px;
   width: 100%;
@@ -523,6 +523,22 @@
   padding: 8px 16px;
 }
 
+
+.ResponseContainer {
+  display: flex;
+  width: 100%;
+  height: 592px;
+  padding: 16px 64px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 71px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: var(--overlay);
+}
+
 .BlockImageOverlayTextArtist > a {
   color: var(--colori-neutri-white);
   text-align: center;
@@ -578,6 +594,67 @@
   display: none;
 }
 
+.ResponseOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 24px 16px;
+  overflow-y: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.TextBeforeLogin {
+  color: var(--primary);
+  text-align: center;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.License {
+  display: flex;
+  align-items: center;
+  color: var(--colori-neutri-dark-gray);
+  /* Body */
+  font-family: var(--font-roboto-slab);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.ButtonAccetta {
+  display: flex;
+  padding: 8px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 100%;
+  align-self: stretch;
+  border-radius: 5px;
+  background: var(--secondary);
+  /* Shade Button Blu */
+  box-shadow: 1px 1px 0px 0px var(--primary);
+  border: none;
+  color: var(--colori-neutri-white, #fff);
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.ButtonAccetta:hover {
+  background: var(--primary);
+}
+
 @media screen and (min-width: 768px) {
   .BlockImage {
     border-radius: 5px;
@@ -590,7 +667,7 @@
     cursor: pointer;
   }
 
-  .BlockImageRelevant{
+  .BlockImageRelevant {
     border-radius: 5px;
     height: 300px;
     width: 100%;
@@ -677,4 +754,19 @@
     background-size: cover;
     cursor: pointer;
   }
+
+.ResponseContainer {
+  display: flex;
+  width: 629px;
+  height: 592px;
+  padding: 16px 64px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 71px;
+  flex-shrink: 0;
+  border-radius: 5px;
+  background: var(--overlay);
+}
 }
