--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -41,7 +41,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  margin-top: 16px;
+  margin-top: 0px;
 }
 
 .BlockImage {
@@ -508,6 +508,18 @@
 
 .Close {
   margin-bottom: 16px;
+  position: fixed;
+  top: 90px;
+  display: flex;
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  border-radius: 30px;
+  background: var(--colori-neutri-white);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
 
@@ -665,6 +677,26 @@
     background-repeat: no-repeat;
     background-size: cover;
     cursor: pointer;
+  }
+
+  .PresenzaInConcorso {
+    display: flex;
+    padding: 5px;
+    justify-content: center;
+    align-items: center;
+    gap: 9px;
+    align-self: stretch;
+    border-radius: 5px;
+    border: 1px solid var(--concorso);
+    background: var(--colori-neutri-white);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.05);
+    font-family: var(--font-roboto-slab);
+    color: var(--primary);
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-top: 50px;
   }
 
   .BlockImageRelevant {
