--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -523,6 +523,17 @@
   cursor: pointer;
 }
 
+.Close:hover,
+.Close:active {
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.1) 0%,
+      rgba(0, 0, 0, 0.1) 100%
+    ),
+    #fff;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 .BlockImageOverlay {
   border-radius: 0px 0px 5px 5px;
   background: linear-gradient(180deg, rgba(31, 30, 28, 0) 0%, #1f1e1c 60.42%);
