Changing color button upload

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,8 @@ body,
   --secondary: #40baec;
   --secondary-variant: #eff8fb;
   --tertiary: #cf4130;
+  --tertiary-shadow: #af3426;
+  --tertiary-hover: #ed4836;
   --monumento-tante-foto: #12AAFF;
   --monumento-poche-foto: #973FFF;
   --concorso: #fed169;
