Changing color upload button

--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,13 @@ body,
   --secondary: #40baec;
   --secondary-variant: #eff8fb;
   --tertiary: #cf4130;
-  --tertiary-shadow: #af3426;
-  --tertiary-hover: #ed4836;
   --monumento-tante-foto: #12AAFF;
   --monumento-poche-foto: #973FFF;
   --concorso: #fed169;
   --overlay: #e9f1f3;
   --success: #0B8927;
+  --success-shadow: #06701f;
+  --success-hover: #0aaf31;
   --colori-neutri-white: #ffffff;
   --colori-neutri-gray: #84a5bd;
   --colori-neutri-gray-2: #d0dfe4;
