--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -206,6 +206,12 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-top: 24px;
+}
+
+.Categorie {
+  font-size: 12px;
+  color: var(--colori-neutri-dark-gray);
 }
 
 .UploadAvvenuto {
