Working on css media queries

--- a/src/components/BottomNavigation/BottomNavigation.module.css
+++ b/src/components/BottomNavigation/BottomNavigation.module.css
@@ -47,7 +47,7 @@
   color: #ffffff;
 }
 
-@media screen and (min-width: 768px) {
+@media (hover: hover) {
   .BottomNavigation {
     height: var(--bottom-desktop-navigation-height);
   }
