--- a/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
+++ b/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
@@ -122,7 +122,7 @@
   color: var(--colori-neutri-white);
 }
 
-@media screen and (min-width: 768px) {
+@media (hover: hover)  {
   .OverlayFilters {
     position: absolute;
     top: 0;
