--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -298,7 +298,7 @@
   font-weight: 500;
 }
 
-@media screen and (min-width: 768px) {
+@media (hover: none) {
   .ModalUploadContainer {
     width: 60%;
     position: relative;
