--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -678,7 +678,7 @@
   background: var(--primary);
 }
 
-@media screen and (min-width: 768px) {
+@media (hover: hover) {
   .BlockImage {
     border-radius: 5px;
     height: 270px;
