--- a/src/pages/Mobile/Map/Map.module.css
+++ b/src/pages/Mobile/Map/Map.module.css
@@ -80,42 +80,41 @@
 }
 
 .ZoomIn {
-  border-radius: 30px;
-  background: var(--colori-neutri-white);
-  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  border: none;
-  margin-top: 8px;
-  position: absolute;
-  left: 16px;
-  top: 8px;
-  font-size: 22px;
-  line-height: 0px;
-  /* font-size: 30px; */
-  color: var(--primary);
+  border-radius: 30px !important;
+  background: var(--colori-neutri-white) !important;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25) !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 44px !important;
+  height: 44px !important;
+  border: none !important;
+  margin-top: 8px !important;
+  position: absolute !important;
+  left: 8px !important;
+  top: 0px !important;
+  font-size: 22px !important;
+  line-height: 0px !important;
+  color: var(--primary) !important;
 }
 
 .ZoomOut {
-  border-radius: 30px;
-  background: var(--colori-neutri-white);
-  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 44px;
-  height: 44px;
-  font-size: 22px;
-  border: none;
-  margin-top: 8px;
-  position: absolute;
-  left: 16px;
-  top: 64px;
+  border-radius: 30px !important;
+  background: var(--colori-neutri-white) !important;
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25) !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  width: 44px !important;
+  height: 44px !important;
+  font-size: 22px !important;
+  border: none !important;
+  margin-top: 8px !important;
+  position: absolute !important;
+  left: 8px !important;
+  top: 48px !important;
   /* font-size: 30px; */
-  color: var(--primary);
+  color: var(--primary) !important;
 }
 
 .LoadingButton {
