Fixing block upload

--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -298,7 +298,7 @@
   font-weight: 500;
 }
 
-@media (hover: none) {
+@media (hover: hover) {
   .ModalUploadContainer {
     width: 60%;
     position: relative;
