--- a/src/components/Mobile/SlideShow/SlideShow.module.css
+++ b/src/components/Mobile/SlideShow/SlideShow.module.css
@@ -71,7 +71,7 @@
   margin-left: 4px;
 }
 
-.Artist > a {
+.Artist {
   color: var(--colori-neutri-white);
   text-align: center;
   font-size: 14px;
