--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -163,9 +163,9 @@
 .ButtonUpload {
   border-radius: 48px;
   border: none;
-  background: var(--success);
+  background: var(--concorso);
   /* Shade Button Blu */
-  box-shadow: 1px 1px 0px 0px var(--success-shadow);
+  box-shadow: 1px 1px 0px 0px var(--concorso-shadow);
   display: inline-flex;
   padding: 16px;
   justify-content: center;
@@ -439,13 +439,13 @@
   align-items: center;
   align-self: stretch;
   border-radius: 5px;
-  background: var(--secondary);
+  background: var(--concorso);
   /* Shade Button Blu */
   width: 100%;
-  box-shadow: 1px 1px 0px 0px var(--primary);
+  box-shadow: 1px 1px 0px 0px var(--concorso-shadow);
   margin-top: 16px;
   border: none;
-  color: var(--colori-neutri-white);
+  color: var(--colori-neutri-dark-gray);
   text-align: center;
   font-size: 12px;
   font-style: normal;
@@ -455,7 +455,7 @@
 }
 
 .ButtonCaricaFoto:hover {
-  background: var(--primary);
+  background: var(--concorso-hover);
 }
 
 .NoMap {
@@ -720,7 +720,7 @@
   }
 
   .ButtonFixedCaricaFoto {
-    color: var(--colori-neutri-white, #fff);
+    color: var(--colori-neutri-dark-gray, #fff);
     text-align: center;
     /* CTA */
     font-size: 12px;
@@ -733,9 +733,9 @@
     align-items: center;
     align-self: stretch;
     border-radius: 20px;
-    background: var(--success);
+    background: var(--concorso);
     /* Shade Button Blu */
-    box-shadow: 1px 1px 0px 0px var(--success-shadow);
+    box-shadow: 1px 1px 0px 0px var(--concorso-shadow);
     position: fixed;
     border: none;
     right: 40px;
@@ -746,7 +746,7 @@
   }
 
   .ButtonFixedCaricaFoto:hover {
-    background: var(--success-hover);
+    background: var(--concorso-hover);
   }
 
   .FixedButtonUpload {
