Working on list filter active

--- a/src/pages/Mobile/List/List.module.css
+++ b/src/pages/Mobile/List/List.module.css
@@ -46,11 +46,6 @@
 }
 
 .ButtonFilters {
-  border-radius: 10px;
-  border: 1px solid var(--primary-color, #118ab2);
-  background: var(--colori-neutri-gray-2, #d0dfe4);
-  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  cursor: pointer;
   display: flex;
   width: 32px;
   height: 32px;
@@ -62,6 +57,11 @@
   right: 8px;
   top: 50%;
   transform: translateY(-50%);
+  border-radius: 10px;
+  border: 1px solid var(--primary);
+  background: var(--primary);
+  cursor: pointer;
+  box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.05);
 }
 
 .ButtonOrdering {
@@ -163,4 +163,14 @@
   font-weight: 400;
   line-height: normal;
   margin-top: 4px;
+}
+
+.Badge{
+  position: absolute;
+  top: -3px;
+  right: -2px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: var(--tertiary);
 }
