--- a/src/pages/Mobile/Detail/Detail.module.css
+++ b/src/pages/Mobile/Detail/Detail.module.css
@@ -664,9 +664,9 @@
   width: 100%;
   align-self: stretch;
   border-radius: 5px;
-  background: var(--secondary);
+  background: var(--concorso);
   /* Shade Button Blu */
-  box-shadow: 1px 1px 0px 0px var(--primary);
+  box-shadow: 1px 1px 0px 0px var(--concorso-shadow);
   border: none;
   color: var(--colori-neutri-white, #fff);
   text-align: center;
@@ -677,7 +677,7 @@
 }
 
 .ButtonAccetta:hover {
-  background: var(--primary);
+  background: var(--concorso-hover);
 }
 
 @media (hover: hover) {
