--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body,
   --monumento-poche-foto: #973fff;
   --concorso: #fed169;
   --concorso-hover: rgba(254, 209, 105, 0.7);
-  --concorso-shadow: #FFB200;
+  --concorso-shadow: #ffb200;
   --overlay: #e9f1f3;
   --success: #0b8927;
   --success-shadow: #06701f;
@@ -149,6 +149,25 @@ body,
   50% {
     transform: scale(1.2, 1);
   }
+}
+
+.button-close-slides-mobile {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 44px;
+  height: 44px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: var(--colori-neutri-white);
+  box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  z-index: 999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .button-close-slides {
