--- a/src/pages/Desktop/List/List.module.css
+++ b/src/pages/Desktop/List/List.module.css
@@ -127,7 +127,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  max-width: 200px;
+  max-width: max-content;
 }
 
 .City {
