Working on media queries

--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -321,7 +321,7 @@
   line-height: normal;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .ModalUploadContainer {
     width: 60%;
     position: relative;
