--- a/src/components/BottomNavigation/BottomNavigation.module.css
+++ b/src/components/BottomNavigation/BottomNavigation.module.css
@@ -47,7 +47,7 @@
   color: #ffffff;
 }
 
-@media (hover: hover) {
+@media (hover: hover) and (pointer: fine) {
   .BottomNavigation {
     height: var(--bottom-desktop-navigation-height);
   }
