--- a/src/index.css
+++ b/src/index.css
@@ -227,7 +227,7 @@ body,
   position: relative !important;
 } */
 
-@media (hover: none) {
+@media (hover: none) and (pointer: coarse) {
   .ol-attribution {
     left: 0px !important;
   }
