Tryng to fix media queries

--- a/src/index.css
+++ b/src/index.css
@@ -238,7 +238,7 @@ body,
   position: relative !important;
 } */
 
-@media (hover: none) and (pointer: coarse) {
+@media (((hover: none) and (pointer: coarse)) or (max-width: 1024px)) {
   .ol-attribution {
     left: 0px !important;
   }
