--- a/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
+++ b/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
@@ -122,7 +122,7 @@
   color: var(--colori-neutri-white);
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (((hover: none) and (pointer: coarse)) or (max-width: 1024px)) {
   .OverlayFilters {
     position: absolute;
     top: 0;
