--- a/src/components/Desktop/BlockFilters/BlockFilters.module.css
+++ b/src/components/Desktop/BlockFilters/BlockFilters.module.css
@@ -248,3 +248,11 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+
+.PointComune {
+  position: absolute;
+  right: 50px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
