isMobile logic and css media query

--- a/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
+++ b/src/components/Mobile/BlockCambiaLingua/BlockCambiaLingua.module.css
@@ -122,7 +122,8 @@
   color: var(--colori-neutri-white);
 }
 
-@media (((hover: none) and (pointer: coarse)) or (max-width: 1024px)) {
+/* @media (((hover: none) and (pointer: coarse)) or (max-width: 1024px)) { */
+@media not (min-width: 1024px) or ((hover: hover) and (pointer: fine)) {
   .OverlayFilters {
     position: absolute;
     top: 0;
