--- a/src/components/Mobile/BlockUpload/BlockUpload.module.css
+++ b/src/components/Mobile/BlockUpload/BlockUpload.module.css
@@ -321,7 +321,8 @@
   line-height: normal;
 }
 
-@media (hover: hover) and (pointer: fine) {
+/* @media (hover: hover) and (pointer: fine) { */
+@media (min-width: 1024px) or ((hover: hover) and (pointer: fine)) {
   .ModalUploadContainer {
     width: 60%;
     position: relative;
